--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <img scr="C:\Users\user\Pictures" alt="FUCK YOUU">
 <ul>
 <li><a href="https://images.genius.com/dc4ccd9bc4923b1f9074cfb5f44d5d46.1000x1000x1.png">Link 1</a></li>
+<li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQ4HA4MYNtxQR4uAhee4J0RMeeCsIaBgY30Q&s">Link 2</a></li>
 <ul>
 </body>
 </html>
