--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="style.css">
-<title>FUCK YOU</title>
+<title>min lille drøm</title>
 </head>
 <body>
 <h1>UWU</h1>
