--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
     // Конфигурация Firebase
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "chat90s-105a4.firebaseapp.com",
-      projectId: "chat90s-105a4",
-      storageBucket: "chat90s-105a4.firebasestorage.app",
-      messagingSenderId: "371325509999",
-      appId: "1:371325509999:web:0a9ce9e63d74d08deac89a",
-      measurementId: "G-W2Z8836SG2" // Комментарий к отдельной строке
+      apiKey: "AIzaSyDLWVTqT4mStqCwiQ--Xhyq8QBvauep6bc",
+    authDomain: "chat90s-105a4.firebaseapp.com",
+    projectId: "chat90s-105a4",
+    storageBucket: "chat90s-105a4.firebasestorage.app",
+    messagingSenderId: "371325509999",
+    appId: "1:371325509999:web:0a9ce9e63d74d08deac89a",
+    measurementId: "G-W2Z8836SG2"
     };
 
     // Инициализация Firebase
