--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <body>
+ <link rel="stylesheet" href="style.css">
+  <title>min lille drøm</title>
+  
   <h1>UWU</h1>
   <p>IT'S THE SHIT THAT IS STYLED 90s</p>
 
