--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
+<DOCYTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+<title>min lille drøm</title>
+</head>
 <body>
- <link rel="stylesheet" href="style.css">
-  <title>min lille drøm</title>
-  
-  <h1>UWU</h1>
-  <p>IT'S THE SHIT THAT IS STYLED 90s</p>
+<h1>UWU</h1>
 
-  <img src="images/photo_2025-01-15_12-57-32.jpg" alt="here should be a photo">
+<p>IT'S THE SHIT THAT IS STYLED 90s</p>
+ 
+<img src="images/photo_2025-01-15_12-57-32.jpg" alt="here should be a photo">
 
+<ul>
+
+  <li><a href="https://images.genius.com/dc4ccd9bc4923b1f9074cfb5f44d5d46.1000x1000x1.png">Link 1</a></li>
+<li><a href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQ4HA4MYNtxQR4uAhee4J0RMeeCsIaBgY30Q&s">Link 2</a></li>
+<ul>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/pOTkCgkxqyg?si=gToMnVRXZLg6hARg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   <div class="chat-container">
     <div class ="chat-header">
      CHAT ROOM #1
